--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -31,10 +31,11 @@
 
   <div class="actions">
     <button mat-button (click)="toggleTheme()">{{ theme() === 'light' ? 'Dark' : 'Light' }}</button>
-    <select class="lang-select" [ngModel]="lang()" (ngModelChange)="switchLanguage($event)">
-      <option value="sk">SK</option>
-      <option value="en">EN</option>
-    </select>
+    <button mat-button [matMenuTriggerFor]="langMenu">{{ lang() | uppercase }}</button>
+    <mat-menu #langMenu="matMenu">
+      <button mat-menu-item (click)="switchLanguage('sk')">SK</button>
+      <button mat-menu-item (click)="switchLanguage('en')">EN</button>
+    </mat-menu>
   </div>
 </mat-toolbar>
 
