--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,30 +1,28 @@
-@if (data(); as homeData) {
+<ng-container *ngIf="data$ | async as homeData">
   <section class="hero">
     <swiper-container slides-per-view="1" space-between="0" center-slides="true" pagination="true" navigation="true" loop="true" autoplay-delay="5000">
-      @for (s of homeData.carousel; track s.id; let first = $first) {
+      <ng-container *ngFor="let s of homeData.carousel; let first = first; trackBy: trackById">
         <swiper-slide>
           <div class="slide-container">
             <img [ngSrc]="s.src" [width]="s.width" [height]="s.height" [alt]="s.alt[lang()]" [priority]="first" />
             <div class="caption">{{ s.caption[lang()] }}</div>
           </div>
         </swiper-slide>
-      }
+      </ng-container>
     </swiper-container>
   </section>
-  
+
   <section class="categories">
     <div class="container">
-      @for (c of homeData.categories; track c.id) {
-        <div class="card">
-          <img [ngSrc]="c.image" [width]="c.width" [height]="c.height" [alt]="c.i18nKeyTitle | translate" />
-          <div class="content">
-            <h3>{{ c.i18nKeyTitle | translate }}</h3>
-            <p>{{ c.i18nKeyDescription | translate }}</p>
-          </div>
+      <div class="card" *ngFor="let c of homeData.categories; trackBy: trackById">
+        <img [ngSrc]="c.image" [width]="c.width" [height]="c.height" [alt]="c.i18nKeyTitle | translate" />
+        <div class="content">
+          <h3>{{ c.i18nKeyTitle | translate }}</h3>
+          <p>{{ c.i18nKeyDescription | translate }}</p>
         </div>
-      }
+      </div>
     </div>
   </section>
-}
+</ng-container>
 
 
