--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,9 @@
 /* Global styles */
 
 /* Angular Material theming - Material Design 3 */
-@import '~@angular/material/theming';
+@use '@angular/material' as mat;
 
-@include mat-core();
+@include mat.core();
 
 // Define custom palettes
 $cyan-orange-palette: (
@@ -57,34 +57,34 @@ $magenta-violet-palette: (
 );
 
 // Define themes
-$cyan-orange-theme: mat-light-theme(
+$cyan-orange-theme: mat.define-light-theme(
   (
     color: (
-      primary: mat-palette($cyan-orange-palette, 700),
-      accent: mat-palette($mat-orange, A200, A100, A400),
+      primary: mat.define-palette($cyan-orange-palette, 700),
+      accent: mat.define-palette(mat.$orange-palette, A200, A100, A400),
     ),
-    typography: mat-typography-config(),
+    typography: mat.define-typography-config(),
     density: 0,
   )
 );
 
-$magenta-dark-theme: mat-dark-theme(
+$magenta-dark-theme: mat.define-dark-theme(
   (
     color: (
-      primary: mat-palette($magenta-violet-palette, 200),
-      accent: mat-palette($mat-purple, A100),
+      primary: mat.define-palette($magenta-violet-palette, 200),
+      accent: mat.define-palette(mat.$purple-palette, A100),
     ),
-    typography: mat-typography-config(),
+    typography: mat.define-typography-config(),
     density: 0,
   )
 );
 
 // Apply default theme
-@include angular-material-theme($cyan-orange-theme);
+@include mat.all-component-themes($cyan-orange-theme);
 
 // Apply dark theme when the class is present
 .magenta-theme {
-  @include angular-material-color($magenta-dark-theme);
+  @include mat.all-component-colors($magenta-dark-theme);
 }
 
 html, body {
@@ -109,7 +109,3 @@ body {
 
 /* Swiper styles after theming */
 @import 'swiper/swiper-bundle.css';
-
-
-
-
