--- a/frontend/src/app/_theming.scss
+++ b/frontend/src/app/_theming.scss
@@ -1,10 +1,10 @@
 @use '@angular/material' as mat;
 
-// Define themes using Material Design 3 syntax with guaranteed palettes
-$cyan-orange-theme: mat.define-theme((
+// Theme 1: Blue-Orange (Light)
+$blue-orange-theme: mat.define-theme((
   color: (
     theme-type: light,
-    primary: mat.$cyan-palette,
+    primary: mat.$blue-palette,
     tertiary: mat.$orange-palette,
   ),
   density: (
@@ -12,20 +12,10 @@ $cyan-orange-theme: mat.define-theme((
   )
 ));
 
-$magenta-violet-theme: mat.define-theme((
-  color: (
-    theme-type: dark,
-    primary: mat.$magenta-palette,
-    tertiary: mat.$violet-palette,
-  ),
-  density: (
-    scale: 0,
-  )
-));
-
+// Theme 2: Blue-Red (Dark)
 $blue-red-theme: mat.define-theme((
   color: (
-    theme-type: light,
+    theme-type: dark,
     primary: mat.$blue-palette,
     tertiary: mat.$red-palette,
   ),
@@ -34,11 +24,24 @@ $blue-red-theme: mat.define-theme((
   )
 ));
 
+// Theme 3: Green-Blue (Light)
 $green-blue-theme: mat.define-theme((
   color: (
-    theme-type: dark,
+    theme-type: light,
     primary: mat.$green-palette,
     tertiary: mat.$blue-palette,
+  ),
+  density: (
+    scale: 0,
+  )
+));
+
+// Theme 4: Red-Orange (Dark)
+$red-orange-theme: mat.define-theme((
+  color: (
+    theme-type: dark,
+    primary: mat.$red-palette,
+    tertiary: mat.$orange-palette,
   ),
   density: (
     scale: 0,
