--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -4,25 +4,39 @@
   <span class="spacer"></span>
 
   <nav class="nav">
-    @for (m of menuItems(); track m.id) {
-      @if (!m.children?.length) {
-        <a mat-button [routerLink]="[m.path]">{{ m.i18nKey | translate }}</a>
-      } @else {
-        <button mat-button [matMenuTriggerFor]="parentMenu">{{ m.i18nKey | translate }}</button>
-        <mat-menu #parentMenu="matMenu">
-          @for (c of m.children; track c.id) {
-            @if (!c.children?.length) {
-              <button mat-menu-item [routerLink]="[c.path]">{{ c.i18nKey | translate }}</button>
-            } @else {
-              <button mat-menu-item [matMenuTriggerFor]="childMenu">{{ c.i18nKey | translate }}</button>
-              <mat-menu #childMenu="matMenu">
-                @for (gc of c.children; track gc.id) {
-                  <button mat-menu-item [routerLink]="[gc.path]">{{ gc.i18nKey | translate }}</button>
-                }
-              </mat-menu>
+    @if (menuItems() && menuItems()!.length > 0) {
+      @for (m of menuItems()!; track m.id) {
+        @if (!m.children?.length) {
+          <a mat-button [routerLink]="[m.path]" routerLinkActive="active-link">{{ m.i18nKey | translate }}</a>
+        } @else {
+          <button mat-button [matMenuTriggerFor]="parentMenu" class="menu-trigger">
+            {{ m.i18nKey | translate }}
+            <mat-icon>expand_more</mat-icon>
+          </button>
+          <mat-menu #parentMenu="matMenu" class="submenu">
+            @for (c of m.children; track c.id) {
+              @if (!c.children?.length) {
+                <a mat-menu-item [routerLink]="[c.path]">
+                  <mat-icon>chevron_right</mat-icon>
+                  <span>{{ c.i18nKey | translate }}</span>
+                </a>
+              } @else {
+                <button mat-menu-item [matMenuTriggerFor]="childMenu">
+                  <mat-icon>chevron_right</mat-icon>
+                  <span>{{ c.i18nKey | translate }}</span>
+                </button>
+                <mat-menu #childMenu="matMenu" class="submenu">
+                  @for (gc of c.children; track gc.id) {
+                    <a mat-menu-item [routerLink]="[gc.path]">
+                      <mat-icon>chevron_right</mat-icon>
+                      <span>{{ gc.i18nKey | translate }}</span>
+                    </a>
+                  }
+                </mat-menu>
+              }
             }
-          }
-        </mat-menu>
+          </mat-menu>
+        }
       }
     }
   </nav>
@@ -42,21 +56,15 @@
     <mat-menu #themeMenu="matMenu" [overlapTrigger]="false" class="theme-menu">
       @for (opt of availableThemes; track trackById($index, opt)) {
         <button mat-menu-item (click)="setTheme(opt.id)" [class.active]="theme() === opt.id">
-          <mat-icon
-            class="theme-radio"
-            [fontIcon]="theme() === opt.id ? 'radio_button_checked' : 'radio_button_unchecked'"
-          >
-          </mat-icon>
-
-          <span class="theme-name">{{ opt.name }}</span>
-
-          <!-- Color swatch exactly like Angular Material website -->
-          <span
-            class="theme-swatch"
-            [style.--swatch-bg]="opt.swatch.background"
-            [style.--swatch-primary]="opt.swatch.primary"
-          >
-          </span>
+          <mat-radio-button
+            [checked]="theme() === opt.id"
+            [value]="opt.id"
+            class="theme-radio">
+          </mat-radio-button>
+          <div class="theme-content">
+            <span class="theme-name">{{ opt.name }}</span>
+            <span class="theme-description">{{ opt.description }}</span>
+          </div>
         </button>
       }
     </mat-menu>
